<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FF000000">
    <com.lochan.octopusnotes.ImageCropView
        android:id="@+id/cropView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingHorizontal="8dp"
        android:paddingVertical="6dp"
        android:background="#FF161616">
        <TextView
            android:id="@+id/cropCancelButton"
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:gravity="center"
            android:paddingHorizontal="16dp"
            android:text="@string/crop_cancel"
            android:textColor="#FFFFFFFF"
            android:textSize="14sp"
            android:background="?attr/selectableItemBackgroundBorderless" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/cropRotateButton"
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:gravity="center"
            android:paddingHorizontal="16dp"
            android:text="@string/crop_rotate"
            android:textColor="#FFFFFFFF"
            android:textSize="14sp"
            android:background="?attr/selectableItemBackgroundBorderless" />

        <TextView
            android:id="@+id/cropDoneButton"
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:gravity="center"
            android:paddingHorizontal="20dp"
            android:text="@string/crop_done"
            android:textStyle="bold"
            android:textColor="#FFFFFFFF"
            android:textSize="14sp"
            android:background="?attr/selectableItemBackgroundBorderless" />
    </LinearLayout>
</LinearLayout>
